--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,10 @@
   <meta charset="utf-8">
   <title>Qa</title>
   <base href="/">
-  
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="http://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.min.css" rel="stylesheet">
   <script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
